<resources>
    <string name="app_name">GuoZiMei</string>

    <string name="user_name">用户名</string>
    <string name="register_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="password">密码</string>
    <string name="set_password">设置密码（不小于六位数）</string>
    <string name="invite_input">邀请码（选填）</string>
    <string name="scan">扫一扫</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="finish_register">完成注册</string>
    <string name="finish">完成</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="no_verify_code">验证码收不到？</string>
    <string name="void_verify_code">试试语音验证码</string>
    <string name="phone_or_email">手机或者邮箱</string>

    <string name="location">位置</string>
    <string name="change_city">切换城市</string>
    <string name="search_hot_info">搜索热门健康咨询</string>
    <string name="key_search">请输入关键词</string>
    <string name="search_you_want">搜索您需要的内容</string>
    <string name="home">首页</string>
    <string name="store">商城</string>
    <string name="hospital">医馆</string>
    <string name="mine">我的</string>
    <string name="name">名字</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="person_info">个人信息</string>
    <string name="collections">收藏</string>
    <string name="attentions">关注</string>
    <string name="discounts">红包卡券</string>
    <string name="steps">足迹</string>

    <string name="health_knowledge">健康知识</string>
    <string name="health_solutions">健康方案</string>
    <string name="health_classes">健康课堂</string>
    <string name="health_test">健康测试</string>
    <string name="questions_answers">问答</string>
    <string name="needed">需求</string>
    <string name="master_in">大师入驻</string>
    <string name="consult">咨询</string>
    <string name="activities">活动</string>
    <string name="book">预约</string>
    <string name="more">更多</string>
    <string name="plus_more">+更多</string>
    <string name="millet_health">辟谷养生</string>
    <string name="master_primary">初级大师</string>
    <string name="master_middle">中级大师</string>
    <string name="master_high">高级大师</string>
    <string name="painting_master">国画大师</string>
    <string name="written_master">书法大师</string>
    <string name="master_appointment">大师预约</string>
    <string name="noun_master">古琴大师</string>

    <string name="complex_sort">综合排序</string>
    <string name="sale_sort">销量优先</string>
    <string name="filtrate">筛选</string>
    <string name="origin_place">产地</string>
    <string name="new_product">新品</string>

    <string name="acupuncture_cure">针灸疗法</string>
    <string name="acupuncture">针灸</string>
    <string name="cupping">拔罐</string>
    <string name="massage">推拿</string>
    <string name="cure_book">看诊预约</string>
    <string name="cure_consult">看诊咨询</string>
    <string name="medicate_diet">药膳食谱</string>
    <string name="special_medicate">特色药膳</string>
    <string name="special_cure">特色理疗</string>
    <string name="company_hospital">合作医院</string>

    <string name="health_report">健康报告</string>
    <string name="my_cure">我的问诊</string>
    <string name="cure_history">问诊记录</string>
    <string name="order">订单</string>
    <string name="book_car">购物车</string>
    <string name="address">地址</string>
    <string name="tickets">优惠券</string>
    <string name="my_booking">我的预约</string>
    <string name="book_buy">已购课程</string>
    <string name="book_card">课程卡</string>
    <string name="to_challenge">去挑战</string>
    <string name="vip_center">会员中心</string>
    <string name="service_center">客服中心</string>
    <string name="want_company">我要合作</string>
    <string name="about_cloud">关于健康云</string>
</resources>
