<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.RegisterActivity">
    <include android:id="@+id/toolbar" layout="@layout/frame_toolbar"/>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_text_ly"
            style="@style/BaseWrap"
            app:errorEnabled="true"
            app:counterMaxLength="34"
            android:gravity="center_vertical"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_big_white"
                android:drawableLeft="@mipmap/ic_phone"
                android:hint="@string/phone_or_email"
                android:drawablePadding="5pt"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_middle_size"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="@dimen/text_middle_size"
            android:textColor="@color/white"
            android:background="@drawable/green_right_round_bg"
            android:layout_alignParentRight="true"
            android:text = "@string/get_verify_code"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        style="@style/BaseWrap"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <TextView
            style="@style/text_small"
            android:drawableLeft="@mipmap/ic_question"
            android:drawablePadding="5dp"
            android:text="@string/no_verify_code"
            />
        <TextView
            style="@style/text_small"
            android:text="@string/void_verify_code"
            android:textColor="@color/red_btn_bg_color"/>
    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/code_input"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_big_white"
        android:drawableLeft="@mipmap/ic_verify_code"
        android:hint="@string/verify_code"
        android:drawablePadding="5pt"
        android:paddingLeft="10dp"
        android:textSize="@dimen/text_middle_size"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_edit_ly"
        style="@style/BaseWrap"
        app:errorEnabled="true"
        app:counterMaxLength="15"
        android:layout_gravity="center_horizontal"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_big_white"
            android:drawableLeft="@mipmap/ic_password"
            android:hint="@string/set_password"
            android:drawablePadding="5pt"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_middle_size"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/finish_register"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/finish_register"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/green_btn_round_bg"/>
</LinearLayout>