<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_account_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:errorEnabled="true"
        app:counterMaxLength="30"
        android:layout_gravity="center_horizontal"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_account_input"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:textSize="@dimen/text_small_size"
            android:background="@drawable/shape_big_white"
            android:drawableLeft="@mipmap/ic_account"
            android:hint="@string/user_name"
            android:drawablePadding="5pt"
            android:paddingLeft="10dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_pwd_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:counterMaxLength="20"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_pwd_input"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_big_white"
            android:drawableLeft="@mipmap/ic_password"
            android:hint="@string/password"
            android:drawablePadding="5pt"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_small_size"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/green_btn_round_bg"/>
    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:id="@+id/tv_register"
            style="@style/text_small"
            android:padding="10dp"
            android:layout_gravity="left"
            android:text="@string/register_account"/>
        <TextView
            android:id="@+id/tv_forget"
            style="@style/text_small"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"/>
    </RelativeLayout>
</LinearLayout>