<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_green"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/v_clothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_store"/>

                <ImageView
                    android:id="@+id/v_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_settings"/>

                <ImageView
                    android:id="@+id/v_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_email"/>
            </LinearLayout>
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/v_portrait"
                android:layout_width="@dimen/person_portrait_radius"
                android:layout_height="@dimen/person_portrait_radius"
                android:src="@mipmap/ic_default_portrait"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:id="@+id/v_name"
                style="@style/mine_text_white"
                android:layout_toRightOf="@id/v_portrait"
                android:textSize="@dimen/text_large_size"
                android:text="@string/name"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/ic_right_arrow"
                />
            <TextView
                android:id="@+id/v_person_msg"
                style="@style/mine_text_white"
                android:text="@string/person_info"
                android:drawablePadding="10dp"
                android:textSize="@dimen/text_middle_size"
                android:layout_toRightOf="@id/v_portrait"
                android:layout_alignBottom="@+id/v_portrait"
                android:drawableRight="@mipmap/ic_right_arrow"
                />
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/v_collections"
                    style="@style/mine_text_white"
                    android:text="6"
                    />
                <TextView
                    style="@style/mine_text_white"
                    android:text="@string/collections"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/v_attentions"
                    style="@style/mine_text_white"
                    android:text="6"
                    />
                <TextView
                    style="@style/mine_text_white"
                    android:text="@string/attentions"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/v_steps"
                    style="@style/mine_text_white"
                    android:text="6"
                    />
                <TextView
                    style="@style/mine_text_white"
                    android:text="@string/steps"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/v_discounts"
                    style="@style/mine_text_white"
                    android:text="6"
                    />
                <TextView
                    style="@style/mine_text_white"
                    android:text="@string/discounts"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>