<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main_green"
                android:padding="0dp"
                app:layout_collapseMode="pin">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/hospital_title"
                        style="@style/text_large"
                        android:layout_centerInParent="true"
                        android:text="@string/store"
                        android:textColor="@color/white"
                        />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

            <EditText
                android:id="@+id/v_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="55dp"
                android:height="40dp"
                android:textSize="@dimen/text_middle_size"
                android:background="@drawable/shape_big_white"
                android:backgroundTint="#f5f5f5"
                android:drawableStart="@mipmap/ic_search"
                android:gravity="center"
                android:hint="@string/key_search"
                android:lines="1" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll"
            android:background="@mipmap/bg_tab"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                >
                <RadioButton
                    android:id="@+id/store_all_cb"
                    android:checked="true"
                    style="@style/CustomPicRadio"
                    android:drawableTop="@drawable/store_all_btn"
                    />
                <RadioButton
                    android:id="@+id/store_wudangshan_cb"
                    style="@style/CustomPicRadio"
                    android:drawableTop="@drawable/store_wudang_btn"
                    />
                <RadioButton
                    android:id="@+id/store_sichuan_cb"
                    style="@style/CustomPicRadio"
                    android:drawableTop="@drawable/store_wudang_btn"
                    />
                <RadioButton
                    android:id="@+id/store_other_cb"
                    style="@style/CustomPicRadio"
                    android:drawableTop="@drawable/store_other_btn"
                    />
            </RadioGroup>

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_bar_1"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@mipmap/bg_tab"
                android:fillViewport="false"
                app:layout_scrollFlags="scroll"
                app:tabIndicatorColor="@color/main_green"
                app:tabIndicatorHeight="2.0dp"
                app:tabSelectedTextColor="#151515"
                app:tabTextColor="@color/normal_text_color"
                >

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:icon="@mipmap/ic_store_all"
                    />

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:icon="@mipmap/ic_store_wudang" />

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:icon="@mipmap/ic_store_sichuan" />

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:icon="@mipmap/ic_store_other" />
            </android.support.design.widget.TabLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_bar_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:fillViewport="false"
                app:layout_scrollFlags="scroll"
                app:tabIndicatorColor="@color/main_green"
                app:tabIndicatorHeight="2.0dp"
                app:tabSelectedTextColor="#151515"
                app:tabTextColor="@color/normal_text_color"
                >


                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:text="@string/complex_sort"/>

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:text="@string/sale_sort" />

                <android.support.design.widget.TabItem
                    style="@style/CustomPicRadio"
                    android:text="@string/filtrate"
                    />
            </android.support.design.widget.TabLayout>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/store_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            >
        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>